Static site is being served via nginx using docker-compose with ssl certification

--- a/nginx/default-dev.conf
+++ b/nginx/default-dev.conf
@@ -3,7 +3,9 @@ server {
     root /var/www/app/site;
     index index.html;
 
-     location /statics/ {
+    error_page 404 /404.html;
+
+    location /static/ {
         alias /var/www/app/site/static;
     }
 
@@ -13,6 +15,6 @@ server {
     }
 
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri.html $uri/ /404.html;
     }
 }
