Static site is being served via nginx using docker-compose with ssl certification

--- a/nginx/default-dev.conf
+++ b/nginx/default-dev.conf
@@ -5,6 +5,8 @@ server {
 
     error_page 404 /404.html;
 
+    include /etc/nginx/conf.d/gzip.conf;
+
     location /static/ {
         alias /var/www/app/site/static;
     }
