--- a/nginx/Dockerfile.prod_ssl
+++ b/nginx/Dockerfile.prod_ssl
@@ -1,6 +1,7 @@
 FROM nginx:1.20.2-alpine
 
 COPY ./default-prod-ssl.conf /etc/nginx/conf.d/default.conf
+COPY ./gzip.conf /etc/nginx/conf.d/gzip.conf
 
 RUN mkdir -p /var/www/app/site/static && \
     chmod 755 /var/www/app/site/static
