--- a/nginx/default-prod-ssl.conf
+++ b/nginx/default-prod-ssl.conf
@@ -36,6 +36,8 @@ server {
 
     error_page 404 /404.html;
 
+    include /etc/nginx/conf.d/gzip.conf;
+
     location /static/ {
         alias /var/www/app/site/static;
     }
