Static site is being served via nginx using docker-compose with ssl certification

--- a/nginx/default-dev.conf
+++ b/nginx/default-dev.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    root /var/www/app/site;
+    root /var/www/app;
     index index.html;
 
     error_page 404 /404.html;
@@ -8,7 +8,7 @@ server {
     include /etc/nginx/conf.d/gzip.conf;
 
     location /static/ {
-        alias /var/www/app/site/static;
+        alias /var/www/app/static;
     }
 
     location ~* \.(css|js|gif|jpe?g|png|svg|json)$ {
