--- a/nginx/default-prod-ssl.conf
+++ b/nginx/default-prod-ssl.conf
@@ -31,7 +31,7 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    root /var/www/app/site;
+    root /var/www/app;
     index index.html;
 
     error_page 404 /404.html;
@@ -39,7 +39,7 @@ server {
     include /etc/nginx/conf.d/gzip.conf;
 
     location /static/ {
-        alias /var/www/app/site/static;
+        alias /var/www/app/static;
     }
 
     location ~* \.(css|js|gif|jpe?g|png|svg|json)$ {
