--- a/docker-compose-prod-ssl.yml
+++ b/docker-compose-prod-ssl.yml
@@ -12,7 +12,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./site:/var/www/app/site
+      - ./site:/var/www/app
       - ./nginx/certbot/www:/var/www/certbot
       - ./nginx/certbot/conf:/etc/letsencrypt
 
