--- a/nginx/Dockerfile.dev
+++ b/nginx/Dockerfile.dev
@@ -3,5 +3,5 @@ FROM nginx:1.20.2-alpine
 COPY ./default-dev.conf /etc/nginx/conf.d/default.conf
 COPY ./gzip.conf /etc/nginx/conf.d/gzip.conf
 
-RUN mkdir -p /var/www/app/site/static && \
-    chmod 755 /var/www/app/site/static
+RUN mkdir -p /var/www/app/static && \
+    chmod 755 /var/www/app/static
